--- a/django/templates/registration/login.html
+++ b/django/templates/registration/login.html
@@ -1,24 +1,72 @@
 {% extends "base.html" %}
 {% block head %}
-<title>Login</title>
-{% endblock %}
+
+{% block stylesheets %}
+    <style>
+        body {
+          background: #eee !important;
+        }
+
+        .wrapper {
+          margin-top: 80px;
+          margin-bottom: 80px;
+        }
+
+        .form-signin {
+          max-width: 380px;
+          padding: 15px 35px 45px;
+          margin: 0 auto;
+          background-color: #fff;
+          border: 1px solid rgba(0, 0, 0, 0.1);
+        }
+        .form-signin .form-signin-heading,
+        .form-signin .checkbox {
+          margin-bottom: 30px;
+        }
+        .form-signin .checkbox {
+          font-weight: normal;
+        }
+        .form-signin input {
+          position: relative;
+          font-size: 16px;
+          height: auto;
+          padding: 10px;
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+        }
+        .form-signin input:focus {
+          z-index: 2;
+        }
+        .form-signin input[type="text"] {
+          margin-bottom: -1px;
+          border-bottom-left-radius: 0;
+          border-bottom-right-radius: 0;
+        }
+        .form-signin input[type="password"] {
+          margin-bottom: 20px;
+          border-top-left-radius: 0;
+          border-top-right-radius: 0;
+        }
+    </style>
+    <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css'>
+    <title>Login</title>
+{% endblock stylesheets %}
+{% endblock head %}
 {% block content %}
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
+
+<div class="wrapper">
+    <form class="form-signin" method="post" action="{% url 'django.contrib.auth.views.login' %}">
+        {% csrf_token %}
+      <h2 class="form-signin-heading">Please login</h2>
+        {{ form.username }}
+        {{ form.password }}
+      <button class="btn btn-lg btn-primary btn-block" type="submit" value="login">Login</button>
+      <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+  </div>
 </form>
-{% endblock %}
+{% endblock content %}
